# libvterm

./: CMakeLists.txt  instructions for creating 'libvterm.dylib'.txt
